infra/k8s/20-deployment-principal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-principal
  namespace: martillo-erp
spec:
  replicas: 2
  selector:
    matchLabels: { app: servicio-principal }
  template:
    metadata:
      labels: { app: servicio-principal }
    spec:
      containers:
        - name: servicio-principal
          image: martillo-erp/servicio-principal:1.0.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8080 }
            initialDelaySeconds: 20
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            initialDelaySeconds: 40
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-principal
  namespace: martillo-erp
spec:
  selector: { app: servicio-principal }
  ports:
    - port: 80
      targetPort: 8080
